logs/hakmatak.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/hakmatak'...
Listing './lib/python3.5/site-packages/hakmatak/cli'...
Compiling './lib/python3.5/site-packages/hakmatak/cli/read.py'...
***   File "./lib/python3.5/site-packages/hakmatak/cli/read.py", line 61
    except getopt.GetoptError, err:
                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/hakmatak/cli/write.py'...
***   File "./lib/python3.5/site-packages/hakmatak/cli/write.py", line 29
    except getopt.GetoptError, err:
                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/hakmatak/d11n.py'...
***   File "./lib/python3.5/site-packages/hakmatak/d11n.py", line 65
    os.makedirs(d11nDir,0755)
                           ^
SyntaxError: invalid token

Compiling './lib/python3.5/site-packages/hakmatak/identifier.py'...
***   File "./lib/python3.5/site-packages/hakmatak/identifier.py", line 104
    print "all tests okay"
                         ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/hakmatak/leaf.py'...
***   File "./lib/python3.5/site-packages/hakmatak/leaf.py", line 22
    raise AttributeError, attr + " not allowed"
                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/hakmatak/node.py'...
***   File "./lib/python3.5/site-packages/hakmatak/node.py", line 22
    raise AttributeError, attr + " not allowed"
                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/hakmatak/output'...
Compiling './lib/python3.5/site-packages/hakmatak/output/factory.py'...
***   File "./lib/python3.5/site-packages/hakmatak/output/factory.py", line 71
    print writerClass
                    ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/hakmatak/output/html'...
Listing './lib/python3.5/site-packages/hakmatak/store'...
Listing './lib/python3.5/site-packages/hakmatak/store/read'...
Listing './lib/python3.5/site-packages/hakmatak/store/read/example'...
Compiling './lib/python3.5/site-packages/hakmatak/store/read/factory.py'...
***   File "./lib/python3.5/site-packages/hakmatak/store/read/factory.py", line 22
    print readerClass
                    ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/hakmatak/store/write'...
Compiling './lib/python3.5/site-packages/hakmatak/store/write/factory.py'...
***   File "./lib/python3.5/site-packages/hakmatak/store/write/factory.py", line 15
    print writerClass
                    ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/hakmatak/util'...
Compiling './lib/python3.5/site-packages/hakmatak/util/magic.py'...
***   File "./lib/python3.5/site-packages/hakmatak/util/magic.py", line 52
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/hakmatak/w10n.py'...
***   File "./lib/python3.5/site-packages/hakmatak/w10n.py", line 36
    raise AttributeError, attr + " not allowed"
                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/hakmatak/wsgi'...
Listing './lib/python3.5/site-packages/hakmatak-1.1.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
